--- a/slope.html
+++ b/slope.html
@@ -99,7 +99,7 @@
 
 <!-- iframe Game -->
 <div class="container" style="padding-top:20px; padding-bottom:20px" align="Center">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store6/solitaire" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/slope" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
