--- a/play.html
+++ b/play.html
@@ -184,7 +184,7 @@ function openFullscreen() {
 
 
 
-<div align="center"  style="padding-top:30px; padding-bottom:20px">
+<div align="center"  style="padding-left:50px; padding-bottom:20px">
 
     <script type="text/javascript">
     atOptions = {
@@ -759,7 +759,7 @@ function openFullscreen() {
     </div>
     <!-- PRODUCT AREA END -->
 
-  <div align="center"  style="padding-top:30px; padding-bottom: 20px;">
+  <div style="padding-bottom: 20px; padding-left:60px;">
 
     <script type="text/javascript">
     atOptions = {
