--- a/play.html
+++ b/play.html
@@ -134,7 +134,7 @@
 
 
 <!-- iframe Game -->
-<div class="container" style="padding-top:20px; padding-bottom:20px">
+<div align="center" class="container" style="padding-top:20px; padding-bottom:20px">
 
     <div class="row">
       <div class="col-md-10">
@@ -184,7 +184,7 @@ function openFullscreen() {
 
 
 
-<div style="padding-left:60px; padding-bottom:20px">
+<div align="center" style="padding-top:20px ; padding-bottom:20px">
 
     <script type="text/javascript">
     atOptions = {
@@ -759,7 +759,7 @@ function openFullscreen() {
     </div>
     <!-- PRODUCT AREA END -->
 
-  <div align="center" style="padding-bottom: 20px;">
+  <div align="center" style="padding-bottom: 50px;">
 
     <script type="text/javascript">
     atOptions = {
