--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
 
 
-<div align="center" style="padding-top:30px; padding-bottom:20px">
+<div align="center" style="padding-bottom:30px">
 <script type="text/javascript">
     atOptions = {
         'key' : '08d39ba02e058abcaf93a1c8a5ad826f',
