--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>OvO Game</title>
-    <meta name="description" content=" Play OvO game unblocked anywhere  on your school chromebooks.">
+    <title>Play OvO Classic Unblocked Game | OvO Classic Github</title>
+    <meta name="description" content="Play OvO Classic Unblocked! Enjoy the timeless platformer with no restrictions. Jump, run, and tackle challenging levels in this exciting adventure. Play now!
+">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Place favicon.png in the root directory -->
@@ -123,14 +124,12 @@
                     <div class="about-us-info-wrap">
                         <div class="section-title-area ltn__section-title-2">
     
-                            <h1 class="section-title">OvO Game Unblocked</h1>
-                            <p>OvO is a super fun running game that students can play on their school Chromebooks without any restrictions.</p>
-                        </div>
-                        <p> OvO game offers an engaging experience that combines fun with mental and physical challenges, making it perfect for players of all skill levels. Dive into 52 themed stages, navigate through obstacles like death spikes, fire rockets, and teleportation portals, and aim to complete the game with lightning speed. OvO is the ultimate fast-paced platformer that will keep you on your toes!</p>
+                            <h1 class="section-title">OvO Classic Unblocked Game</h1>
+                           <p>OvO is a super fun running game that students can play on their school Chromebooks without any restrictions. It offers an engaging experience that combines fun with mental and physical challenges, making it perfect for players of all skill levels. Dive into 52 themed stages, navigate through obstacles like death spikes, fire rockets, and teleportation portals, and aim to complete the game with lightning speed. OvO is the ultimate fast-paced platformer that will keep you on your toes!</p>
                         <div class="about-author-info d-flex"> 
                             <div class="author-name-designation  align-self-center mr-30">
                             <a href="/play.html">
-                            <button class="btn theme-btn-1 btn-effect-1 text-uppercase">  PLAY NOW </button> </a>
+                            <button class="btn theme-btn-1 btn-effect-1 text-uppercase">  OvO Classic | Play Now! </button> </a>
                             </div>
                             
                         </div>
@@ -838,12 +837,12 @@
                 <div class="row">
                     <div class="col-md-6 col-12">
                         <div class="ltn__copyright-design clearfix">
-                            <p>Ovoclassic.github.io @ <span class="current-year"></span></p>
+                            <p>Ovo-classic.github.io @ <span class="current-year"></span></p>
                         </div>            
                     </div>
                 <div style="padding-left: 350px;" class="col-md-6 col-12">
                         <div class="ltn__copyright-design clearfix">
-                            <p> Contact Us: Theatrafic@gmail.com</p>
+                            <p> Contact Us: abbasseoexpert119@gmail.com</p>
                         </div>            
                     </div>
 
