--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div class="col-lg-6 align-self-center">
                     <div class="about-us-img-wrap about-img-left">
                         <a href="/play.html"> 
-                        <img src="/assets/img/img1.png" alt="OvO game"> </a>
+                        <img src="/assets/img/img1.png" alt="OvO Classic game"> </a>
                     </div>
                 </div>
                 <div class="col-lg-6 align-self-center">
@@ -129,7 +129,7 @@
                         <div class="about-author-info d-flex"> 
                             <div class="author-name-designation  align-self-center mr-30">
                             <a href="/play.html">
-                            <button class="btn theme-btn-1 btn-effect-1 text-uppercase">  OvO Classic | Play Now! </button> </a>
+                            <button class="btn theme-btn-1 btn-effect-1 text-uppercase"> Play Now! </button> </a>
                             </div>
                             
                         </div>
