--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
                         <div class="section-title-area ltn__section-title-2">
     
                             <h1 class="section-title">OvO Classic Unblocked Game</h1>
-                           <p>OvO is a super fun running game that students can play on their school Chromebooks without any restrictions. It offers an engaging experience that combines fun with mental and physical challenges, making it perfect for players of all skill levels. Dive into 52 themed stages, navigate through obstacles like death spikes, fire rockets, and teleportation portals, and aim to complete the game with lightning speed. OvO is the ultimate fast-paced platformer that will keep you on your toes!</p>
+                           <p>OvO is a super fun running game that students can play on their school Chromebooks without any restrictions.</p>
+                               <p>It offers an engaging experience that combines fun with mental and physical challenges, making it perfect for players of all skill levels. Dive into 52 themed stages, navigate through obstacles like death spikes, fire rockets, and teleportation portals, and aim to complete the game with lightning speed. OvO is the ultimate fast-paced platformer that will keep you on your toes!</p>
                         <div class="about-author-info d-flex"> 
                             <div class="author-name-designation  align-self-center mr-30">
                             <a href="/play.html">
