--- a/play.html
+++ b/play.html
@@ -7,7 +7,9 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> Play OvO Game</title>
+    <title> Play OvO Classic Game</title>
+     <meta name="description" content="Play OvO Classic Game! Enjoy the timeless platformer with no restrictions. Jump, run, and tackle challenging levels in this exciting adventure. Play now!
+">
    
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -21,19 +23,6 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <!-- Responsive css -->
     <link rel="stylesheet" href="/assets/css/responsive.css">
-
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HL208Z6XL7"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-HL208Z6XL7');
-</script>
-
-
-
 
 </head>
 
@@ -57,7 +46,7 @@
                     <div class="col">
                         <div class="site-logo-wrap">
                             <div class="site-logo">
-                                <a href="/"><img src="/assets/img/logo.png" alt="OvO game"></a>
+                                <a href="/"><img src="/assets/img/logo.png" alt="OvO Classic game"></a>
                             </div>
                         </div>
                     </div>
@@ -114,25 +103,6 @@
             </div>
 
 
-
-
-<div align="center" style="padding-top:30px; padding-bottom:20px">
-<script type="text/javascript">
-    atOptions = {
-        'key' : '08d39ba02e058abcaf93a1c8a5ad826f',
-        'format' : 'iframe',
-        'height' : 90,
-        'width' : 728,
-        'params' : {}
-    };
-    document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/08d39ba02e058abcaf93a1c8a5ad826f/invoke.js"></scr' + 'ipt>');
-</script>
-
-</div>    
-
-
-
-
 <!-- iframe Game -->
 <div class="container" style="padding-top:20px; padding-bottom:20px"  align="center">
 
@@ -144,60 +114,10 @@
 
    </div>
 
-<script>
-var elem = document.getElementById("gm-area");
-function openFullscreen() {
-  if (elem.requestFullscreen) {
-    elem.requestFullscreen();
-  } else if (elem.webkitRequestFullscreen) { /* Safari */
-    elem.webkitRequestFullscreen();
-  } else if (elem.msRequestFullscreen) { /* IE11 */
-    elem.msRequestFullscreen();
-  }
-}
-</script>
-</div>
-
-
-
- <div class="col-md-2">
-<script type="text/javascript">
-    atOptions = {
-        'key' : '1d23640a72b94b653d6c2ce0bb47d8bf',
-        'format' : 'iframe',
-        'height' : 600,
-        'width' : 160,
-        'params' : {}
-    };
-    document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/1d23640a72b94b653d6c2ce0bb47d8bf/invoke.js"></scr' + 'ipt>');
-</script>
-
- </div>   
-
-
-
-
 </div>
 
 </div>
 <!-- End iframe Game -->
-
-
-
-<div align="center" style="padding-top:20px ; padding-bottom:20px">
-
-    <script type="text/javascript">
-    atOptions = {
-        'key' : 'd8bc1d0bcce09ef3b713e165530b1225',
-        'format' : 'iframe',
-        'height' : 60,
-        'width' : 468,
-        'params' : {}
-    };
-    document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/d8bc1d0bcce09ef3b713e165530b1225/invoke.js"></scr' + 'ipt>');
-</script>
-
-</div>
 
 
 
@@ -759,21 +679,6 @@ function openFullscreen() {
     </div>
     <!-- PRODUCT AREA END -->
 
-  <div align="center" style="padding-bottom: 50px;">
-
-    <script type="text/javascript">
-    atOptions = {
-        'key' : 'f3eaf23ffab528f6b2a6e5b5e8cc6f43',
-        'format' : 'iframe',
-        'height' : 250,
-        'width' : 300,
-        'params' : {}
-    };
-    document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/f3eaf23ffab528f6b2a6e5b5e8cc6f43/invoke.js"></scr' + 'ipt>');
-</script>
-
-  </div>
-
 
 
 
@@ -786,7 +691,7 @@ function openFullscreen() {
                 <div class="row">
                     <div class="col-md-6 col-12">
                         <div class="ltn__copyright-design clearfix">
-                            <p>Ovoclassic.github.io @ <span class="current-year"></span></p>
+                            <p>Ovo-classic.github.io @ <span class="current-year"></span></p>
                         </div>            
                     </div>
                 
