--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@
 <p>It can be said that in the World Wide Web of gaming, there’s no other game that has grabbed the interest of kids, teenagers, and adults and maintained their interest as long as OvO Classic did. Now, the fans of this game can play OvO Classic Unblocked, no matter what devices they use, whether it is a school Chromebook or a home desktop computer. It is now high time to explain why this game is so interesting and wonderful for all the fans to try and why it can unite players of different levels.</p>
 
     <h2>What is OvO Classic?</h2>
-    <p>OvO Classic is a fast-paced platformer in which the mandatory move in a given level is replaced by various puzzles that involve both the player’s brain and limbs. The game's premise is simple: to guide your character through different levels filled with different obstacles and dangers on each level. The major difference from a huge number of platformers is clear control, interesting level design, and a perfectly matched level of difficulty and the amount of fun.</p>
+    <p><a href="https://ovo-classic.github.io/">OvO Classic</a> is a fast-paced platformer in which the mandatory move in a given level is replaced by various puzzles that involve both the player’s brain and limbs. The game's premise is simple: to guide your character through different levels filled with different obstacles and dangers on each level. The major difference from a huge number of platformers is clear control, interesting level design, and a perfectly matched level of difficulty and the amount of fun.</p>
 
     <h2>Features of OvO Classic Unblocked</h2>
     <ul>
