--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Play OvO Classic Unblocked Game | OvO Classic Github</title>
     <meta name="description" content="Play OvO Classic Unblocked! Enjoy the timeless platformer with no restrictions. Jump, run, and tackle challenging levels in this exciting adventure. Play now!
 ">
+    <meta name="google-site-verification" content="6X16UeNicX1h321DliCROhwuWyWFPlaV3CelXKq0iRk" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Place favicon.png in the root directory -->
