--- a/play.html
+++ b/play.html
@@ -128,7 +128,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="tunnel-rush.html"> 
+                    <a href="go/tunnel-rush.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/tunnel-rush.png">
                             <div class="product-badge">       
@@ -143,7 +143,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="temple-of-boom.html"> 
+                    <a href="go/temple-of-boom.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/temple-of-boom.png">
                             <div class="product-badge">       
@@ -158,7 +158,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="dreadhead-parkour.html"> 
+                    <a href="go/dreadhead-parkour.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/dreadhead-parkour.png">
                             <div class="product-badge">       
@@ -173,7 +173,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="blumgi-ball.html"> 
+                    <a href="go/blumgi-ball.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/blumgi-ball.png">
                             <div class="product-badge">       
@@ -188,7 +188,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="brain-test-tricky-puzzles.html"> 
+                    <a href="go/brain-test-tricky-puzzles.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/brain-test-tricky-puzzles.png">
                             <div class="product-badge">       
@@ -203,7 +203,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="city-car-driving-stunt-master.html"> 
+                    <a href="go/city-car-driving-stunt-master.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/city-car-driving-stunt-master.png">
                             <div class="product-badge">       
@@ -218,7 +218,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="solitaire.html"> 
+                    <a href="go/solitaire.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/solitaire.png">
                             <div class="product-badge">       
@@ -233,7 +233,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="duck-life.html"> 
+                    <a href="go/duck-life.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/duck-life.png">
                             <div class="product-badge">       
@@ -248,7 +248,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="basket-bros.html"> 
+                    <a href="go/basket-bros.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/basket-bros.png">
                             <div class="product-badge">       
@@ -263,7 +263,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="jetpack-joyride.html"> 
+                    <a href="go/jetpack-joyride.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/jetpack-joyride.png">
                             <div class="product-badge">       
@@ -278,7 +278,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="rolly-vortex.html"> 
+                    <a href="go/rolly-vortex.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/rolly-vortex.png">
                             <div class="product-badge">       
@@ -293,7 +293,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="bloxorz.html"> 
+                    <a href="go/bloxorz.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/bloxorz.png">
                             <div class="product-badge">       
@@ -308,7 +308,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="there-is-no-game.html"> 
+                    <a href="go/there-is-no-game.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/there-is-no-game.png">
                             <div class="product-badge">       
@@ -323,7 +323,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="car-rush.html"> 
+                    <a href="go/car-rush.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/car-rush.png">
                             <div class="product-badge">       
@@ -338,7 +338,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="vex-7.html"> 
+                    <a href="go/vex-7.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/vex-7.png">
                             <div class="product-badge">       
@@ -353,7 +353,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="awesome-tanks-2.html"> 
+                    <a href="go/awesome-tanks-2.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/awesome-tanks-2.png">
                             <div class="product-badge">       
@@ -368,7 +368,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="slope.html"> 
+                    <a href="go/slope.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/slope.png">
                             <div class="product-badge">       
@@ -383,7 +383,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="parking-fury.html"> 
+                    <a href="go/parking-fury.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/parking-fury.png">
                             <div class="product-badge">       
@@ -398,7 +398,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="burrito-bison.html"> 
+                    <a href="go/burrito-bison.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/burrito-bison.png">
                             <div class="product-badge">       
@@ -413,7 +413,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="adventure-drivers.html"> 
+                    <a href="go/adventure-drivers.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/adventure-drivers.png">
                             <div class="product-badge">       
@@ -428,7 +428,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="hover-racer.html"> 
+                    <a href="go/hover-racer.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/hover-racer.png">
                             <div class="product-badge">       
@@ -443,7 +443,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="3d-moto-simulator-2.html"> 
+                    <a href="go/3d-moto-simulator-2.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/3d-moto-simulator-2.png">
                             <div class="product-badge">       
@@ -458,7 +458,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="pre-civilization-bronze-age.html"> 
+                    <a href="go/pre-civilization-bronze-age.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/pre-civilization-bronze-age.png">
                             <div class="product-badge">       
@@ -473,7 +473,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="riddle-school.html"> 
+                    <a href="go/riddle-school.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/riddle-school.png">
                             <div class="product-badge">       
@@ -488,7 +488,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="duck-life-3-evolution.html"> 
+                    <a href="go/duck-life-3-evolution.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/duck-life-3-evolution.png">
                             <div class="product-badge">       
@@ -503,7 +503,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="candy-jump.html"> 
+                    <a href="go/candy-jump.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/candy-jump.png">
                             <div class="product-badge">       
@@ -518,7 +518,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="color-tunnel-2.html"> 
+                    <a href="go/color-tunnel-2.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/color-tunnel-2.png">
                             <div class="product-badge">       
@@ -533,7 +533,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="top-speed-3d.html"> 
+                    <a href="go/top-speed-3d.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/top-speed-3d.png">
                             <div class="product-badge">       
@@ -548,7 +548,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="brain-test-2-tricky-stories.html"> 
+                    <a href="go/brain-test-2-tricky-stories.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/brain-test-2-tricky-stories.png">
                             <div class="product-badge">       
@@ -565,7 +565,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="demolition-derby-crash-racing.html"> 
+                    <a href="go/demolition-derby-crash-racing.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/demolition-derby-crash-racing.png">
                             <div class="product-badge">       
@@ -580,7 +580,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="crazy-tunnel-3d.html"> 
+                    <a href="go/crazy-tunnel-3d.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/crazy-tunnel-3d.png">
                             <div class="product-badge">       
@@ -595,7 +595,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="head-soccer-2023.html"> 
+                    <a href="go/head-soccer-2023.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/head-soccer-2023.png">
                             <div class="product-badge">       
@@ -610,7 +610,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="penalty-shooters-2.html"> 
+                    <a href="go/penalty-shooters-2.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/penalty-shooters-2.png">
                             <div class="product-badge">       
@@ -625,7 +625,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="burnin-rubber-crash-n-burn.html"> 
+                    <a href="go/burnin-rubber-crash-n-burn.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/burnin-rubber-crash-n-burn.png">
                             <div class="product-badge">       
@@ -640,7 +640,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="rally-champion.html"> 
+                    <a href="go/rally-champion.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/rally-champion.png">
                             <div class="product-badge">       
@@ -655,7 +655,7 @@
 
             <!-- ltn__product-item -->
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <a href="thumb-fighter.html"> 
+                    <a href="go/thumb-fighter.html"> 
                        <div class="product-img">
                             <img src="https://bonbang.github.io/img/thumb-fighter.png">
                             <div class="product-badge">       
