--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
                     </div>
                 <div style="padding-left: 350px;" class="col-md-6 col-12">
                         <div class="ltn__copyright-design clearfix">
-                            <p> Contact Us: abbasseoexpert119@gmail.com</p>
+                            <p> Contact Us: infofreddielewis12@gmail.com</p>
                         </div>            
                     </div>
 
