--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
     <!-- PRODUCT AREA END -->
 
           <div class="container">
-<p>It can be said that in the World Wide Web of gaming, there’s no other game that has grabbed the interest of kids, teenagers, and adults and maintained their interest as long as OvO Classic did. Now, the fans of this game can play OvO Classic Unblocked, no matter what devices they use, whether it is a school Chromebook or a home desktop computer. It is now high time to explain why this game is so interesting and wonderful for all the fans to try and why it can unite players of different levels.</p>
+<p>It can be said that in the World Wide Web of gaming, there’s no other game that has grabbed the interest of kids, teenagers, and adults and maintained their interest as long as <a href="https://ovo-classic.github.io/">OvO github</a> did. Now, the fans of this game can play OvO Classic Unblocked, no matter what devices they use, whether it is a school Chromebook or a home desktop computer. It is now high time to explain why this game is so interesting and wonderful for all the fans to try and why it can unite players of different levels.</p>
 
     <h2>What is OvO Classic?</h2>
     <p><a href="https://ovo-classic.github.io/">OvO Classic</a> is a fast-paced platformer in which the mandatory move in a given level is replaced by various puzzles that involve both the player’s brain and limbs. The game's premise is simple: to guide your character through different levels filled with different obstacles and dangers on each level. The major difference from a huge number of platformers is clear control, interesting level design, and a perfectly matched level of difficulty and the amount of fun.</p>
@@ -809,7 +809,7 @@
     <p>OvO Classic Unblocked also contributes to the creation of a group identity of the people involved in the game. Getting the best scores by trying to beat the previous gamers and exchanging ideas with other players is another plus to the game. This social aspect promotes enjoyment and better interaction and makes the whole experience even more exciting.</p>
 
     <h2>Conclusion</h2>
-    <p>OvO Classic Unblocked is not just a game but it is an awesome experience of fun, contest, and availability. Combined with the non-restrictive licenses, the game offers an ideal form of entertainment for the students, office clerks, or anyone who wants to have a brief but fully satisfying game session. Hi there, welcome to the wonderful virtual world of OvO Classic Unblocked; you’ll find out that it is one of the best platformer games out there. In the game OvO Classic Unblocked, you can try to avoid deadly obstacles or try to run through the levels as fast as possible.</p>
+    <p><a href="https://ovo-classic.github.io/">OvO github</a> is not just a game but it is an awesome experience of fun, contest, and availability. Combined with the non-restrictive licenses, the game offers an ideal form of entertainment for the students, office clerks, or anyone who wants to have a brief but fully satisfying game session. Hi there, welcome to the wonderful virtual world of OvO Classic Unblocked; you’ll find out that it is one of the best platformer games out there. In the game OvO Classic Unblocked, you can try to avoid deadly obstacles or try to run through the levels as fast as possible.</p>
               
           </div>
 
